--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="terms.html">Terms of Service</a>
         <a href="privacy.html">Privacy Policy</a>
         <a href="contact.html">Contact</a>
+        <a href="faq.html">F.A.Q</a>
+        <a href="resources.html">Chess Resources</a>
     </nav>
 
     <!-- Main Content -->
