--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="contact.html">Contact</a>
         <a href="faq.html">F.A.Q</a>
         <a href="resources.html">Chess Resources</a>
+        <a href="chess.html">Chess Analysis</a>
     </nav>
 
     <!-- Main Content -->
