--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LichessOnline - Play & Learn Chess</title>
+    <title>LichessOnline - Play & Improve Chess</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -14,40 +14,54 @@
         <span id="userStatus"></span> 
         <a href="about.html">About Us</a>
         <a href="blogs.html">Blogs</a>
-        <a href="terms.html">Terms of Service</a>
-        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms</a>
+        <a href="privacy.html">Privacy</a>
         <a href="contact.html">Contact</a>
-        <a href="faq.html">F.A.Q</a>
-        <a href="resources.html">Chess Resources</a>
+        <a href="faq.html">FAQ</a>
+        <a href="resources.html">Resources</a>
         <a href="chess.html">Chess Analysis</a>
     </nav>
 
     <!-- Main Content -->
     <header>
         <h1>Welcome to LichessOnline</h1>
-        <p>Your trusted online chess platform for learning, playing, and improving.</p>
+        <p>The ultimate online chess platform for players of all levels.</p>
     </header>
 
     <section class="content">
         <h2>Why Choose LichessOnline?</h2>
-        <p>At <strong>LichessOnline.blogs</strong>, we provide a seamless and secure platform for chess enthusiasts of all levels.</p>
+        <p>At <strong>LichessOnline</strong>, we provide a secure, feature-rich environment for chess lovers to learn, and improve their game.</p>
 
-        <h3>✔ 100% Secure & Private</h3>
-        <p>We take user privacy seriously. Your personal data is encrypted and never shared with third parties.</p>
+        <div class="features">
+            <div class="feature">
+                <h3>✔ Secure & Private</h3>
+                <p>Your personal data remains **encrypted and protected**. We never share information with third parties.</p>
+            </div>
 
-        <h3>✔ View Blogs</h3>
-        <p>Join an active chess community where regular top Lichess blogs are published.</p>
+            <div class="feature">
+                <h3>✔ Take Knowledge, From Anywhere</h3>
+                <p>Read and analyze the blog post deeply ,understand the gameplay **real-time games**, or practice.</p>
+            </div>
 
-        <h3>✔ Learn from the Best</h3>
-        <p>Access to top blogs including chess tutorials, expert strategies, and improvement tips.</p>
+            <div class="feature">
+                <h3>✔ Expert Learning Resources</h3>
+                <p>Access **top chess blogs, tutorials, and analysis** to sharpen your skills.</p>
+            </div>
 
-        <h3>✔ Play Chess Anytime</h3>
-        <p>Challenge players worldwide, practice tactics, and improve your rating.</p>
+            <div class="feature">
+                <h3>✔ Community & Engagement</h3>
+                <p>Join our **active chess community**, read insightful blogs, and discuss strategies with experts. Join our lichess team as well link - </p>
+            </div>
+        </div>
+
+        <h2>Ready to Begin?</h2>
+        <p>Sign up today and start playing chess with players worldwide!</p>
+        <a href="signup.html" class="cta-button">Get Started</a>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 LichessOnline.blogs. All rights reserved.</p>
+        <p>&copy; 2024 LichessOnline. All rights reserved.</p>
     </footer>
 
     <script>
@@ -61,8 +75,8 @@
             document.getElementById("deleteAccountBtn").addEventListener("click", function() {
                 let confirmDelete = confirm("Are you sure you want to delete your account? This action cannot be undone.");
                 if (confirmDelete) {
-                    localStorage.clear(); // Delete all stored data (history, username, etc.)
-                    sessionStorage.clear(); // Clears session storage too (if any)
+                    localStorage.clear(); // Clear user data
+                    sessionStorage.clear(); // Clear session storage
                     alert("Your account has been deleted.");
                     window.location.href = "signup.html"; // Redirect to signup page
                 }
@@ -72,5 +86,6 @@
             userStatus.innerHTML = `<a href="signup.html">Signup</a> | <a href="login.html">Login</a>`;
         }
     </script>
+
 </body>
 </html>
