--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LichessOnline - Play & Improve Chess</title>
+    <title>LichessOnline - Premier Chess Blog & Analysis Platform</title>
     <link rel="stylesheet" href="style.css"> 
+    <meta name="description" content="LichessOnline features top-rated chess blogs, game analysis, and educational resources for chess enthusiasts of all levels.">
 </head>
 <body>
 
@@ -13,56 +14,73 @@
         <a href="index.html" class="logo">LichessOnline</a>
         <span id="userStatus"></span> 
         <a href="about.html">About Us</a>
-        <a href="blogs.html">Blogs</a>
+        <a href="blogs.html">Featured Blogs</a>
         <a href="terms.html">Terms</a>
         <a href="privacy.html">Privacy</a>
         <a href="contact.html">Contact</a>
         <a href="faq.html">FAQ</a>
-        <a href="resources.html">Resources</a>
-        <a href="chess.html">Chess Analysis</a>
+        <a href="resources.html">Learning Resources</a>
+        <a href="chess.html">Game Analysis</a>
     </nav>
 
     <!-- Main Content -->
     <header>
-        <h1>Welcome to LichessOnline</h1>
-        <p>The ultimate online chess platform for players of all levels.</p>
+        <h1>LichessOnline Chess Blog Platform</h1>
+        <p>Curating the internet's most valuable chess content - featuring only top-rated blogs, tutorials, and game analyses from the chess community.</p>
     </header>
 
     <section class="content">
-        <h2>Why Choose LichessOnline?</h2>
-        <p>At <strong>LichessOnline</strong>, we provide a secure, feature-rich environment for chess lovers to learn, and improve their game.</p>
+        <h2>About Our Chess Blog Platform</h2>
+        <p><strong>LichessOnline</strong> is not a gaming platform, but rather a specialized chess education hub where we:</p>
+        <ul>
+            <li>Aggregate and showcase the most insightful chess blogs from around the web</li>
+            <li>Feature in-depth game analyses from master-level players</li>
+            <li>Provide structured learning pathways for chess improvement</li>
+            <li>Highlight trending chess strategies and opening innovations</li>
+        </ul>
 
         <div class="features">
             <div class="feature">
-                <h3>✔ Secure & Private</h3>
-                <p>Your personal data remains **encrypted and protected**. We never share information with third parties.</p>
+                <h3>✔ Expert-Curated Content</h3>
+                <p>Every blog post undergoes review by our chess experts to ensure only high-quality, educational content makes it to our platform. We filter out noise so you get straight to valuable insights.</p>
             </div>
 
             <div class="feature">
-                <h3>✔ Take Knowledge, From Anywhere</h3>
-                <p>Read and analyze the blog post deeply ,understand the gameplay **real-time games**, or practice.</p>
+                <h3>✔ Community-Ranked Articles</h3>
+                <p>Our ranking system surfaces the most helpful content based on actual user engagement and chess improvement results. The best content rises to the top.</p>
             </div>
 
             <div class="feature">
-                <h3>✔ Expert Learning Resources</h3>
-                <p>Access **top chess blogs, tutorials, and analysis** to sharpen your skills.</p>
+                <h3>✔ Structured Learning Paths</h3>
+                <p>Blogs are organized by skill level (beginner, intermediate, advanced) and topic (openings, endgames, tactics) so you can systematically improve your game.</p>
             </div>
 
-            <div class="feature">
-                <h3>✔ Community & Engagement</h3>
-                <p>Join our **active chess community**, read insightful blogs, and discuss strategies with experts. Join our lichess team as well link - </p>
-            </div>
-        </div>
+        <h2>Our Content Selection Process</h2>
+        <p>We maintain strict quality standards for featured content:</p>
+        <ol>
+            <li><strong>Originality Check:</strong> All submissions must provide unique insights not found elsewhere</li>
+            <li><strong>Practical Value:</strong> Content must demonstrate clear application to real games</li>
+            <li><strong>Accuracy Review:</strong> All chess analysis is verified for correctness</li>
+            <li><strong>Community Feedback:</strong> We prioritize content with proven positive user feedback</li>
+        </ol>
 
-        <h2>Ready to Begin?</h2>
-        <p>Sign up today and start playing chess with players worldwide!</p>
-        <a href="signup.html" class="cta-button">Get Started</a>
+        <h2>Join Our Chess Learning Community</h2>
+        <p>While we don't host games, we connect you with the best educational content and like-minded chess learners:</p>
+        <ul>
+            <li>Weekly digest of top new chess blogs</li>
+            <li>Exclusive master-level analysis content</li>
+            <li>Priority access to our Lichess study groups</li>
+        </ul>
+        <a href="signup.html" class="cta-button">Get Free Chess Insights</a>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 LichessOnline. All rights reserved.</p>
+        <p>&copy; 2025 LichessOnline Blog Platform. All rights reserved.</p>
+        <p>Disclaimer: LichessOnline is an independent blog aggregator and is not affiliated with lichess.org.</p>
     </footer>
+</body>
+</html>
 
     <script>
         let username = localStorage.getItem("username");
