--- a/about.html
+++ b/about.html
@@ -3,39 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - LichessOnline</title>
+    <title>About Us - LichessOnline Chess Blog Platform</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Learn about LichessOnline - a specialized platform curating top chess blogs and educational content from the Lichess community">
 </head>
 <body>
 
     <header>
         <h1>About LichessOnline</h1>
+        <p class="subtitle">Your Gateway to Premium Chess Knowledge</p>
     </header>
 
     <section class="content">
-        <h2>Who We Are</h2>
-        <p>LichessOnline is a premier online chess platform dedicated to providing an immersive and competitive chess experience for players of all skill levels. Our mission is to make chess accessible, engaging, and rewarding for everyone.</p>
+        <h2>What LichessOnline Really Is</h2>
+        <div class="highlight-box">
+            <p><strong>Important Note:</strong> LichessOnline is <em>not</em> a chess gaming platform. We are an independent educational resource that:</p>
+            <ul>
+                <li>✔️ Curates and organizes the best chess blogs from Lichess.org users</li>
+                <li>✔️ Provides structured learning paths using community-created content</li>
+                <li>✔️ Offers tools to bookmark and take notes on chess concepts</li>
+                <li>✔️ Features master-level game analyses from Lichess games</li>
+            </ul>
+        </div>
 
-        <h2>Our Mission</h2>
-        <p>We strive to create an intuitive and fair chess platform where players can sharpen their skills, compete in tournaments, and connect with a global chess community.</p>
+        <h2>Our Unique Value Proposition</h2>
+        <p>While Lichess.org provides the games, we provide the <strong>knowledge infrastructure</strong>:</p>
+        
+        <div class="features">
+            <div class="feature">
+                <h3>Content Curation</h3>
+                <p>We manually select only the top 5% of Lichess blogs based on:</p>
+                <ul>
+                    <li>Educational value</li>
+                    <li>Original analysis</li>
+                    <li>Community feedback</li>
+                    <li>Practical application</li>
+                </ul>
+            </div>
+            
+            <div class="feature">
+                <h3>Learning Tools</h3>
+                <p>Our platform enhances Lichess content with:</p>
+                <ul>
+                    <li>Progress tracking</li>
+                    <li>Personalized recommendations</li>
+                    <li>Note-taking system</li>
+                    <li>Skill assessments</li>
+                </ul>
+            </div>
+        </div>
 
-        <h2>Why Choose Us?</h2>
-        <ul>
-            <li>✔️ Free Top Lichess Blog Content.</li>
-            <li>✔️ Create account.</li>
-            <li>✔️ Improve and learn chess wth blogs.</li>
-            <li>✔️ Create Notes from Notes page.</li>
+        <h2>What We Don't Do</h2>
+        <p>To avoid confusion:</p>
+        <ul class="disclaimer">
+            <li>❌ We don't host chess games (play on Lichess.org)</li>
+            <li>❌ We don't create original content (we organize existing Lichess blogs)</li>
+            <li>❌ We're not affiliated with Lichess.org (but we love their platform)</li>
         </ul>
 
-        <h2>Meet the Team</h2>
-        <p>Our passionate team of chess enthusiasts, developers, and designers work tirelessly to provide the best experience. We believe in the power of chess to bring people together and sharpen minds.</p>
+        <h2>Our Content Sources</h2>
+        <p>All material comes from:</p>
+        <ol>
+            <li>Public Lichess.org blogs (with creator attribution)</li>
+            <li>Community-submitted analysis (verified by our team)</li>
+            <li>Selected chess educational content (properly licensed)</li>
+        </ol>
 
-        <h2>Contact Us</h2>
-        <p>Have questions or feedback? Reach out to us at <a href="mailto:support@lichessonline.com">support@lichessonline.com</a></p>
+        <h2>Meet Our Curation Team</h2>
+        <p>Our team consists of:</p>
+        <ul>
+            <li><strong>Chess Experts</strong> (2000+ ELO) who evaluate content quality</li>
+            <li><strong>Editors</strong> who organize material into learning paths</li>
+            <li><strong>Developers</strong> who build our knowledge management tools</li>
+        </ul>
+
+        <h2>Contact & Support</h2>
+        <p>For content suggestions or questions:</p>
+        <ul class="contact-info">
+            <li>📧 <a href="mailto:content@lichessonline.com">content@lichessonline.com</a> (for blog submissions)</li>
+            <li>📧 <a href="mailto:support@lichessonline.com">support@lichessonline.com</a> (for technical issues)</li>
+            <li>🐦 <a href="https://twitter.com/lichessonline" target="_blank">@lichessonline</a> (for quick queries)</li>
+        </ul>
+
+        <div class="cta-box">
+            <h3>Ready to Improve Your Chess?</h3>
+            <p>Start exploring our curated knowledge base today:</p>
+            <a href="blogs.html" class="cta-button">Browse Top Chess Blogs</a>
+        </div>
     </section>
 
     <footer>
-        <p>© 2025 LichessOnline. All rights reserved.</p>
+        <p>© 2025 LichessOnline. An independent educational resource for the Lichess community.</p>
+        <p class="disclaimer">Not affiliated with lichess.org. All curated content remains property of original authors.</p>
     </footer>
 
 </body>
