--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <a href="contact.html">Contact</a>
         <a href="faq.html">FAQ</a>
         <a href="resources.html">Learning Resources</a>
-        <a href="chess.html">Game Analysis</a>
+        <a href="teams.html">Top Teams</a>
+        <a href="notes.html">Notes Taker</a>
     </nav>
 
     <!-- Main Content -->
